# uwu-engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
lib/: CMakeLists.txt
lib/spine-c/src/: Animation.c  AnimationState.c  Bone.c  SkeletonJson.c
src/: CMakeLists.txt  FrameRateController.cpp  Random.cpp  Serialization.cpp  SoundInterface.cpp  StateMachine.cpp  Timer.cpp  WindowManager.cpp  main.cpp
src/Behaviors/: HUDBehaviors.cpp  ParticleSystem.cpp
src/Components/: BehaviorComponentManager.cpp  CMakeLists.txt  ColliderComponentManager.cpp  HierarchyComponentManager.cpp  LightingComponentManager.cpp  ParentChildComponentManager.cpp  SpineSkeletonComponentManager.cpp  TransformComponentManager.cpp
src/Debugs/: CMakeLists.txt  TraceLogger.cpp
src/Editor/: DragAndDrop.cpp  Editor.cpp  EditorComponent.cpp  EditorHelper.cpp  EditorMainMenu.cpp  EditorWindow.cpp  EditorWindowManager.cpp
src/Editor/Components/: EditorParticleSystem.cpp  EditorPhysics.cpp  EditorTransform.cpp
src/Editor/Windows/: EditorComponentViewer.cpp  EditorEntityViewer.cpp
src/EngineCore/: AnimationSys.cpp  BehaviorSys.cpp  CMakeLists.txt  Deserialization.cpp  EditorSys.cpp  Engine.cpp  EntitySys.cpp  FrameLimiterSys.cpp  FrameRateController.cpp  GameStateManager.cpp  Helper.cpp  Order.cpp  PlatformSpecific.cpp  Random.cpp  Reflection.cpp  SceneSys.cpp  Serialization.cpp  SoundInterface.cpp  StateMachine.cpp  System.cpp  SystemUpdater.cpp  Timer.cpp  TimerSys.cpp  WindowManager.cpp  WindowSys.cpp
src/EngineCore/Behaviors/: CMakeLists.txt  DynamicCamera.cpp  GameplayTags.cpp  HUDBehaviors.cpp  ParticleSystem.cpp  TextObject.cpp
src/EngineCore/Components/: AnimationComp.cpp  AnimationComponentManager.cpp  BaseComponent.cpp  BehaviorComp.cpp  BehaviorComponentManager.cpp  CMakeLists.txt  ColliderComp.cpp  ColliderComponentManager.cpp  EntityComp.cpp  HierarchyComp.cpp  LightComp.cpp  LightingComponentManager.cpp  MeshComponentManager.cpp  ParentChildComponentManager.cpp  PhysicsComp.cpp  PhysicsComponentManager.cpp  SpineAnimationComp.cpp  SpineAnimationComponentManager.cpp  SpineSkeletonComp.cpp  SpineSkeletonComponentManager.cpp  TextureComp.cpp  TextureComponentManager.cpp  TransformComp.cpp  TransformComponentManager.cpp
src/EngineCore/Debug/: ColoredOutput.cpp  LogSys.cpp
src/EngineCore/Debugs/: ColoredOutput.cpp  DebugManager.cpp  LogSys.cpp  TraceLogger.cpp
src/EngineCore/Editor/: CMakeLists.txt  Component.cpp  DragAndDrop.cpp  DragAndDropSys.cpp  Editor.cpp  EditorComponent.cpp  EditorHelper.cpp  EditorMainMenu.cpp  EditorSys.cpp  EditorWindow.cpp  EditorWindowManager.cpp  Utils.cpp  Window.cpp  WindowManager.cpp
src/EngineCore/Editor/Components/: EditorPhysics.cpp  EditorTexture.cpp  EditorTransform.cpp
src/EngineCore/Editor/Windows/: ComponentViewer.cpp  Demo.cpp  EditorComponentViewer.cpp  EditorEntityViewer.cpp  EditorImGUIDemo.cpp  EditorTextureViewer.cpp  EntityViewer.cpp
src/EngineCore/Entity/: CMakeLists.txt  EntityCacher.cpp  EntityFactory.cpp  EntityIDManager.cpp  EntityManager.cpp  EntitySys.cpp  EntityVector.cpp
src/EngineCore/Event/: Event.cpp  EventDispatcher.cpp  EventListener.cpp
src/EngineCore/Event/Type/: Collision.cpp
src/EngineCore/GamePlay/: CMakeLists.txt
src/EngineCore/GamePlay/Enemy/: CMakeLists.txt
src/EngineCore/GamePlay/Player/: CMakeLists.txt  PlayerAirborne.cpp  PlayerController.cpp  PlayerDash.cpp  PlayerDeath.cpp  PlayerGrounded.cpp  PlayerHurt.cpp
src/EngineCore/Graphics/: Camera.cpp  CameraSys.cpp  Instances.cpp  InstancingMod.cpp  LightSys.cpp  Mesh.cpp  Render.cpp  RenderSys.cpp  SSBOMod.cpp  TextureAtlaserMod.cpp  UBOMod.cpp  VAOMod.cpp
src/EngineCore/Graphics/Debugs/: Picker.cpp
src/EngineCore/Graphics/Lighting/: CMakeLists.txt  DirectionalLight.cpp  LightSys.cpp  Lighting.cpp  PointLight.cpp  SpotLight.cpp
src/EngineCore/Graphics/Shader/: GLSLShader.cpp  ShaderMod.cpp  ShaderModule.cpp  UBOModule.cpp  UniformBufferSystem.cpp
src/EngineCore/Graphics/Spine/: SpineAnimationSys.cpp  SpineCompatibility.cpp  SpineDataMod.cpp
src/EngineCore/Graphics/SpineAnimation/: SpineCompatibility.cpp  SpineDataManager.cpp
src/EngineCore/Input/: ActionManager.cpp  ActionSys.cpp  CMakeLists.txt  InputManager.cpp  InputSys.cpp
src/EngineCore/Physics/: CMakeLists.txt  Collider.cpp  ColliderCircle.cpp  ColliderLine.cpp  ColliderPoint.cpp  ColliderPolygon.cpp  ColliderSys.cpp  PhysicsSys.cpp
src/EngineCore/Scene/: Scene.cpp  SceneManager.cpp  SceneSys.cpp
src/EngineCore/Scene/Custom/: BrayanSBOX.cpp
src/EngineCore/UI/: HUDManager.cpp  HUDSys.cpp  UIManager.cpp  UISys.cpp
src/EngineCore/rttrsamples/: from_json.cpp  to_json.cpp
src/Entity/: EntityCacher.cpp  EntityFactory.cpp  EntityManager.cpp
src/Event/: Event.cpp
src/Executable/: CMakeLists.txt  EngineSettings.cpp  GameStateManager.cpp  SystemRegistration.cpp  main.cpp
src/Executable/Scenes/: BrayanSBOX.cpp  EndScreen.cpp  Level1.cpp  Level2.cpp  YiPlayGround.cpp
src/GamePlay/Player/: PlayerAirborne.cpp  PlayerDash.cpp  PlayerDeath.cpp  PlayerGrounded.cpp  PlayerHurt.cpp  PlayerStartUp.cpp
src/Graphics/: CMakeLists.txt  Camera.cpp  Instances.cpp  Render.cpp
src/Graphics/Debugs/: Picker.cpp
src/Graphics/FBO/: FBOModule.cpp
src/Graphics/Lighting/: Lighting.cpp
src/Graphics/Shader/: CMakeLists.txt  ShaderModule.cpp  UniformBufferSystem.cpp  glslshader.cpp
src/Graphics/SpineAnimation/: CMakeLists.txt  SpineCompatibility.cpp
src/Graphics/Texture/: CMakeLists.txt  TextureAtlaser.cpp  TextureLoader.cpp
src/Input/: InputManager.cpp
src/Physics/Colliders/: ColliderCircle.cpp  ColliderPoint.cpp  ColliderPolygon.cpp
src/PonderTest/: CMakeLists.txt  main.cpp
src/Scenes/: BrayanSBOX.cpp  CMakeLists.txt  EndScreen.cpp  Level1.cpp  Level2.cpp  Level3.cpp  LogoScene.cpp  YiPlayGround.cpp
src/Tests/: CMakeLists.txt  HelperTest.cpp  TestMain.cpp
src/Tests/Core/: BehaviorTest.cpp  EntityTest.cpp  EventTest.cpp  HelperTest.cpp  PhysicsTest.cpp
src/Tests/UWUTest/: Logger.cpp  Order.cpp
src/UI/: CMakeLists.txt  HUDManager.cpp
(+289 files in other folders)
